--- a/lab/Lab 10 - Principal Component Analysis.ipynb
+++ b/lab/Lab 10 - Principal Component Analysis.ipynb
@@ -58,6 +58,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -1569,12 +1581,12 @@
           24.197412645838888
          ],
          "y": [
-          2.357406852571097e-13,
-          -2.357406852571097e-13
+          2.357406852571097E-13,
+          -2.357406852571097E-13
          ],
          "z": [
-          2.33295984032594e-13,
-          -2.33295984032594e-13
+          2.33295984032594E-13,
+          -2.33295984032594E-13
          ]
         },
         {
@@ -1587,16 +1599,16 @@
          "opacity": 0.5,
          "type": "scatter3d",
          "x": [
-          5.057944437499881e-14,
-          -5.057944437499881e-14
+          5.057944437499881E-14,
+          -5.057944437499881E-14
          ],
          "y": [
           -6.987776567142933,
           6.987776567142933
          ],
          "z": [
-          4.9740587671524844e-14,
-          -4.9740587671524844e-14
+          4.9740587671524844E-14,
+          -4.9740587671524844E-14
          ]
         },
         {
@@ -1609,12 +1621,12 @@
          "opacity": 0.5,
          "type": "scatter3d",
          "x": [
-          -3.927535504712208e-15,
-          3.927535504712208e-15
+          -3.927535504712208E-15,
+          3.927535504712208E-15
          ],
          "y": [
-          -3.94805665414884e-15,
-          3.94805665414884e-15
+          -3.94805665414884E-15,
+          3.94805665414884E-15
          ],
          "z": [
           -4.260765391847702,
@@ -5271,15 +5283,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
   }
  },
  "nbformat": 4,
